h1. CHANGELOG

h2. 2.2.10 unreleased

* use 'git add -A' instead of 'git add .' (and use '-qm' instead of '-aqm' for git commit)
* add 'email_spec' when RSpec is selected (even when email is 'none')
* fix 'models' recipe to set provider in 'config/initializers/omniauth.rb' (rails-composer issue 19)
* fix 'models' recipe for security fix for OmniAuth (contributed by Bradley Grzesiak)
* fix 'gems' and 'setup' recipes to correct use of google_oauth2 provider for OmniAuth (issue 117)
* fix 'extras' recipe to check for rvm gem version 1.11.3.5 or newer

h2. 2.2.9 September 10, 2012

* fix 'extras' recipe to improve error reporting when creating a project-specific rvm gemset

h2. 2.2.8 September 7, 2012

* run 'bundle update' before everything to avoid "already activated" gem issues
* fix 'extras' recipe to resolve issues creating a project-specific rvm gemset
* update gem 'haml-rails' from 0.3.4 to 0.3.5
* update gem 'slim' from 1.2.2 to 1.3.0
* update gem 'bootstrap-sass' from 2.0.4.0 to 2.1.0.0
* update gem 'puma' from 1.6.2 to 1.6.3
* update gem 'pg' from 0.14.0 to 0.14.1

h2. 2.2.7 September 1, 2012

* improve 'testing' recipe for better handling of RSpec 'spec/spec_helper.rb'

h2. 2.2.6 August 30, 2012

* fix 'prelaunch' recipe to correct application name in the routes.rb file

h2. 2.2.5 August 29, 2012

* fix 'frontend' recipe to remove application.css after twitter-bootstrap-rails creates it

h2. 2.2.4 August 29, 2012

* improve 'setup' recipe to save diagnostics before anything can fail
* improve 'setup' recipe to not offer "Twitter Bootstrap (Less)" to Windows users
* improve 'extras' recipe to only ask Linux users about adding 'therubyracer' gem
* fix 'setup' recipe for error introduced in version 2.2.3
* update gem 'puma' from 1.6.1 to 1.6.2

h2. 2.2.3 August 27, 2012

* fix 'setup', 'frontend', and 'controllers' recipes to allow CanCan authorization when OmniAuth authentication is selected

h2. 2.2.2 August 26, 2012
